final mobile shifting fix?

--- a/wetmap/src/App.css
+++ b/wetmap/src/App.css
@@ -5,6 +5,7 @@
 .App {
   text-align: center;
   width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
   overflow-y: hidden;
 }
